<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/recommend_back_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_black_back"/>

        <TextView
            android:id="@+id/recommend_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/recommend_title_text"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:text="@string/recommend_content_text1"
        android:textStyle="bold|italic"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_recommend"
        android:scaleType="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:text="@string/recommend_content_text2"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:text="@string/recommend_wechat_text"
            android:drawableTop="@mipmap/ic_wechat"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:text="@string/recommend_wechat_friend_text"
            android:drawableTop="@mipmap/ic_wechat_friend"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:text="@string/recommend_qq_text"
            android:drawableTop="@mipmap/ic_qq"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:text="@string/recommend_qq_zone_text"
            android:drawableTop="@mipmap/ic_qq_zone"/>

    </LinearLayout>

</LinearLayout>