<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/more_activity_back_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_black_back"/>

        <TextView
            android:id="@+id/more_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/menu_more_text"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>

    <LinearLayout
        android:id="@+id/about_us_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:onClick="preferenceEntryClickListener"
        android:background="@drawable/selector_ripple_item">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/about_preference_entry"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>

    <LinearLayout
        android:id="@+id/feedback_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:onClick="preferenceEntryClickListener"
        android:background="@drawable/selector_ripple_item">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/feedback_preference_entry"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>

    <LinearLayout
        android:id="@+id/help_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:onClick="preferenceEntryClickListener"
        android:background="@drawable/selector_ripple_item">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/help_preference_entry"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>

    <LinearLayout
        android:id="@+id/upgrade_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:onClick="preferenceEntryClickListener"
        android:background="@drawable/selector_ripple_item">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/upgrade_preference_entry"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>

    <LinearLayout
        android:id="@+id/customer_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:onClick="preferenceEntryClickListener"
        android:background="@drawable/selector_ripple_item">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/customer_preference_entry"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/sg_divider_color"/>
</LinearLayout>